<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_main">战舰少女Viewer</string>

    <string name="app_name">ZjsnViewer</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="repair_widget_name">ZjsnViewer - 修理</string>
    <string name="travel_widget_name">ZjsnViewer - 远征</string>
    <string name="build_widget_name">ZjsnViewer - 建造</string>
    <string name="make_widget_name">ZjsnViewer - 开发</string>
    <string name="repair_name">修理</string>
    <string name="travel_name">远征</string>
    <string name="build_name">建造</string>
    <string name="make_name">开发</string>
    <string name="none">加载未完成</string>
    <string name="shipowner">加载未完成</string>
    <string name="loading">Loading...</string>

    <string name="tidu_name">提督の名前</string>
    <string name="max">Level: 150 (MAX)</string>
    <string name="set_name">设置</string>
    <string name="username_hint">请设置提督的账号密码</string>

    <string name="title_activity_settings_info">SettingsInfo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_zjsn_viewer">ZjsnViewer</string>


    <string name="checking_update">检查更新中</string>
    <string name="check_update_fail_connection">网络不给力，检查失败 QwQ</string>
    <string name="check_update_fail_parse">无法检测更新，可能当前版本过旧</string>
    <string name="check_update_success_no_update">当前版本已经是最新的了</string>
    <string name="check_update_success_update_available">发现新版本</string>

    <string name="check_update_title">版本更新</string>
    <string name="check_update_title_download_manager">战舰少女Viewer</string>
    <string name="check_update_downloading">下载中</string>
    <string name="check_update_important">\n程序有较大的变动，建议更新</string>
    <string name="check_update_body">当前版本: @curr@\n最新版本: @new@\n新版本功能: \n@feature@</string>

    <string name="check_update_yes">现在下载</string>
    <string name="check_update_no">下次再说</string>

    <string name="unavailable">暂未开放 QwQ</string>

    <string name="black_warning">黑科技有风险，使用请谨慎</string>
    <string name="root_please">请给我root权限喵~ 0w0</string>
    <string name="root_success">root成功 ~\(≧▽≦)/~</string>
    <string name="root_fail">root失败 QwQ</string>

    <string name="settings_yes">确定</string>
    <string name="settings_no">取消</string>

</resources>
