<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/widget_minor"
    android:orientation="vertical">

    <include
        layout="@layout/pref_shared_toolbar"
        android:id="@+id/include2">
    </include>

    <!--<android.support.v4.widget.SwipeRefreshLayout-->
        <!--android:id="@+id/sr_refresh"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->


        <!--<ScrollView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent">-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="88dp"
                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_width="88dp"
                        android:layout_height="match_parent"
                        android:id="@+id/ib_icon"
                        android:src="@drawable/app_icon"
                        android:clickable="true"
                        android:contentDescription="@string/app_name"
                        android:background="#00ffffff"
                        android:scaleType="fitCenter" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/app_name"
                            android:id="@+id/tv_name"
                            android:layout_marginTop="10dp"
                            android:layout_centerVertical="true"
                            android:textColor="@color/widget_major"
                            android:shadowColor="@color/widget_major_shadow"
                            android:shadowDx="1"
                            android:shadowDy="1"
                            android:shadowRadius="2"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/shipowner"
                            android:id="@+id/tv_level"
                            android:layout_alignParentBottom="true"
                            android:textColor="@color/widget_major"
                            android:shadowColor="@color/widget_major_shadow"
                            android:shadowDx="1"
                            android:shadowDy="1"
                            android:shadowRadius="2"/>
                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_travel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@drawable/text_color"
                        android:text="@string/travel_name"/>
                    <TextView
                        android:id="@+id/tv_repair"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@drawable/text_color"
                        android:text="@string/repair_name"/>
                    <TextView
                        android:id="@+id/tv_build"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@drawable/text_color"
                        android:text="@string/build_name"/>
                    <TextView
                        android:id="@+id/tv_make"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@drawable/text_color"
                        android:text="@string/make_name"/>
                </LinearLayout>

                <android.support.v4.view.ViewPager
                    android:id="@+id/vp_page"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </android.support.v4.view.ViewPager>

            </LinearLayout>

        <!--</ScrollView>-->

    <!--</android.support.v4.widget.SwipeRefreshLayout>-->

</LinearLayout>
